# synth

./: CMakeLists.txt  Common.h  Parameter.h  build.bat  synth.cpp
build --target clean/: CMakeCache.txt  Makefile  cmake_install.cmake
build clean/: CMakeCache.txt  Makefile  cmake_install.cmake
doc/: .~lock.midi.ods#  freq.xlsx  midi.ods  note_frequencies.xlsx
include/BerVibrato/: BerVibrato.cpp  BerVibrato.h  Lfo.cpp  Lfo.h
include/DrumMachine/: DrumMachine.cpp  DrumMachine.h  Sequencer.cpp  Sequencer.h  perc_shaker.h
include/FmSynth/: FmSynth.cpp  FmSynth.h
include/OrganEngine/: Config.h  Envelope.cpp  Envelope.h  MidiManager.cpp  MidiManager.h  Note.h  NoteFrequency.h  NoteManager.cpp  NoteManager.h  OrganOscillator.cpp  OrganOscillator.h  Parameter.h  Ringbuffer.cpp  Ringbuffer.h  RotarySpeaker.cpp  RotarySpeaker.h  SharedResources.h  TonewheelsFrequency.h  WaveTables.cpp  WaveTables.h
include/RtMidi/android/app/src/main/cpp/: RtMidi.cpp  RtMidi.h
include/RtMidi/android/app/src/main/java/com/yellowlab/rtmidi/: MidiDeviceOpenedListener.java
include/SynthEngine/: Envelope.h  MidiManager.cpp  Note.h  NoteFrequency.h  OrganOscillator.h  OrganSynthesizer.cpp  OrganSynthesizer.h  Parameter.h  RotarySpeaker.h  SharedResources.cpp  SharedResources.h  WaveTables.h
include/WaveOrgan/: Envelope.cpp  Envelope.h  SoftClip.cpp  SoftClip.h  WaveOrgan.cpp  WaveOrgan.h  WavePiano.cpp  WavePiano.h  bass.h  trumpet.h
include/WaveOrgan/effects/: harpsi.h  synth.h
include/WaveOrgan/orchestra/: bass.h  clarinet.h  flute8.h
include/WaveOrgan/tools/: convert.sh  wav2hr.cpp
include/miniaudio/: miniaudio.h
include/nanomidi/: msgprint.c  msgprint.h  nanomidi_decoder.c  nanomidi_internal.h  nanomidi_stream.c
src/: AudioDriver.cpp  AudioDriver.h  Common.h  Config.h  Envelope.cpp  Envelope.h  EnvelopeADSR.h  Instrument.h  MidiDriver.cpp  MidiDriver.h  MidiManager.cpp  MidiManager.h  Note.h  NoteFrequency.h  OrganOscillator.cpp  OrganOscillator.h  OrganSynthesizer.cpp  OrganSynthesizer.h  Oscillator.h  Parameter.h  Profiler.h  RotarySpeaker.cpp  RotarySpeaker.h  RotarySpeakerEffect.cpp  RotarySpeakerEffect.h  SharedResources.h  Synth.cpp  SystemConfig.h  VibratoEffect.cpp  VibratoEffect.h  WaveTables.cpp  WaveTables.h  Waveforms.cpp
test/: TestFmSynth.cpp  TestPerformance.cpp  TestSequencer.cpp  TestWaveOrgan.cpp
tools/: convert.sh  wav2hc.cpp  wav2hr.cpp
tools/header_1024_unsigned_16/: clarinet.h  flute4.h  violin.h
tools/header_effects_unsigned_16/: bells.h  perc4.h  piano.h
tools/header_orchestra_unsigned_16/: flute4.h  flute8.h  trumpet.h  violin.h
tools/header_perc_unsigned_16_44100/: perc_kick.h  perc_kick_hard.h  perc_snare.h  perc_stick.h
tools/header_piano_unsigned_16_44100/: rhodes.h
